@@ -1,7 +1,7 @@
 ---
 title: "IntelliJ IDEA"
 category: Developers
-order: 1
+order: 3
 toc: true
 ---
 
@@ -14,7 +14,16 @@ Build phoenicis (root) → Lifecycle → package
 
 ### Run
 Run → Edit Configurations
-add: JavaFXApplication with main class org.phoenicis.javafx.JavaFXApplication
+add: JavaFXApplication with:
+* main class: org.phoenicis.javafx.JavaFXApplication
+* VM options: 
+```
+--add-modules=ALL-MODULE-PATH --module-path=phoenicis-dist/target/lib
+```
+* **With Java 11**, you may need to remove the = in --module-path
+```
+--add-modules=ALL-MODULE-PATH --module-path phoenicis-dist/target/lib
+```
 ![IntelliJ IDEA configuration](/images/intellij-idea-run.png)
 
 ### Code Style
